fixing display on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -188,6 +188,10 @@ span.mc-field-group {
     background: $magenta;
 }
 
+.social-buttons {
+  padding-bottom: 40px;
+}
+
 // Footer
 
 footer {
